refactor: TodoDTO to TodoDto
