# TodoApi/Todos/TodoDTO.cs
@@ -2,13 +2,13 @@
 
 namespace TodoApi.Todos;
 
-public record class TodoDTO(
+public record class TodoDto(
     int Id, 
     string Name, 
     bool IsComplete, 
     DateTimeOffset Created, 
     DateTimeOffset Modified)
 {
-    internal TodoDTO(Todo todo) : this(todo.Id, todo.Name, todo.IsComplete, todo.Created, todo.Modified)
+    internal TodoDto(Todo todo) : this(todo.Id, todo.Name, todo.IsComplete, todo.Created, todo.Modified)
     { }
 }
